--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 <body>
     <div class="global">
         <div class="sesion-inicio">
-            <div class="caja1">
-                <img class="img1" src ="img/sesion inicial/Captura_desde_2024-10-23_20-09-18-removebg-preview.png" alt="">
-                <img class="img2" src="img/sesion inicial/foto.jpg" alt="">
-            </div>
+            <div class="caja1"></div>
             <div class="caja2"></div>
+            <div><img class="img1" src ="img/sesion inicial/Captura_desde_2024-10-23_20-09-18-removebg-preview.png" alt=""></div>
+            <div> <img class="img2" src="img/sesion inicial/foto.jpg" alt=""></div>
+            <div><img class="estrella" src="img/sesion inicial/estrella.svg" alt=""></div>
+            <div><img class="estrella1" src="img/sesion inicial/estrella.svg" alt=""></div>
+            <div><img class="estrella2" src="img/sesion inicial/estrella.svg" alt=""></div>
+            <div><img class="logo" src="img/sesion inicial/logo.png" alt=""></div>
+            <div><img class="linea" src="img/sesion inicial/linea.svg" alt="" ></div>
         </div>
         
-        <div class="caja3"></div>
-        <div class="caja4"></div>
+            <div class="seccion-nosotros">
+                <div class="lunas">
+                <div><img class="medialuna" src="img/seccion nosotros/medialuna.svg" alt="" ></div>
+                <div><img class="medialuna" src="img/seccion nosotros/medialuna1.svg" alt="" ></div>
+                </div>
+
+
+
+
+            </div>
+        
         <div class="caja5"></div>
         <div class="caja6"></div>
         <div class="caja7"></div>
